@@ -10,9 +10,10 @@ import org.modelmapper.ModelMapper;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class NotificationAndMessageMapper {
+
+    private NotificationAndMessageMapper(){}
 
     private static final ModelMapper modelMapper = new ModelMapper();
 
@@ -82,7 +83,7 @@ public class NotificationAndMessageMapper {
                         element.getCategory().equals(TimelineElementCategoryV20Dto.AAR_GENERATION) ||
                         element.getCategory().equals(TimelineElementCategoryV20Dto.NOT_HANDLED)
                 )
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static Document getDocument(NotificationAttachmentDownloadMetadataResponseDto responseDto){
